# chatbot

./: .gitignore  Makefile  README.md
backend/: langgraph.json  main.py  pyproject.toml
backend/chatbot/: graph.py  hitl_graph.py
frontend/: package-lock.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Chatbot.tsx  HitlChatbot.tsx
frontend/src/components/assistant-ui/: thread.tsx  tooltip-icon-button.tsx
frontend/src/services/: hitlApi.ts
