[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.9",
    "langgraph>=0.6.6",
    "langgraph-cli",
    "pydantic>=2.11.7",
    "uvicorn>=0.35.0",
]


[tool.setuptools]
packages = ["chatbot"]

[tool.ruff]
# Enable auto-fixing
fix = true
unsafe-fixes = false

lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501",
]


[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]


[tool.ruff.lint.pydocstyle]
convention = "google"
